install next-mdx-remote and next-remote-watch

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:watch": "next-remote-watch ./content",
     "build": "next build",
     "start": "next start"
   },
@@ -12,6 +13,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "next-mdx-remote": "^3.0.4",
+    "next-remote-watch": "1.0.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
