--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
   "scripts": {
+    "build": "next build",
     "dev": "next dev",
     "dev:watch": "next-remote-watch ./content",
-    "build": "next build",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
@@ -15,6 +16,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.0.1",
     "gray-matter": "^4.0.3",
     "next-mdx-remote": "^3.0.4",
     "next-remote-watch": "1.0.0",
