--- a/package.json
+++ b/package.json
@@ -21,10 +21,17 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "husky": "^7.0.1",
     "next-mdx-remote": "^3.0.4",
     "next-remote-watch": "1.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
     "tailwindcss": "^2.2.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint"
+    }
   }
 }
