--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "slugify": "^1.6.0",
     "tailwindcss": "^2.2.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
