--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@zeit/next-css": "^1.0.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
@@ -36,7 +38,8 @@
     "slugify": "^1.6.0",
     "tailwindcss": "^2.2.4",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "url-loader": "^4.1.1"
   },
   "husky": {
     "hooks": {
