--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@xstate/react": "^1.5.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "xstate": "^4.23.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
