--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/react": "^17.0.15",
     "autoprefixer": "^10.2.6",
+    "chai": "^4.3.4",
     "cypress": "^8.2.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.0.1",
@@ -31,6 +32,7 @@
     "gray-matter": "^4.0.3",
     "husky": "^7.0.1",
     "markdown-toc": "^1.2.0",
+    "mocha": "^9.0.3",
     "next-mdx-remote": "^3.0.4",
     "next-remote-watch": "1.0.0",
     "postcss": "^8.3.5",
