--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "xstate": "^4.23.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@types/react": "^17.0.15",
     "autoprefixer": "^10.2.6",
     "chai": "^4.3.4",
