update tsconfig.json to use paths to automatically import types from common.d.ts
https://www.typescriptlang.org/tsconfig#paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "*": ["types/*.d.ts"]
+    },
     "target": "es5",
     "lib": [
       "dom",
