--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "update-slugs": "ts-node scripts/updateSlugs.ts",
     "generate-content": "ts-node scripts/generateContentFiles.ts",
     "start": "next start",
+    "pre-commit": "pretty-quick --staged && npm run lint && yarn test",
     "test": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'"
   },
   "dependencies": {
@@ -56,10 +57,5 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
     "url-loader": "^4.1.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run lint && yarn test"
-    }
   }
 }
