removed custom build directory for output. added some custom build scripts for profiling and debugging

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:profile": "next build --profile",
+    "build:debug": "next build --debug",
     "dev": "next dev",
     "dev:watch": "next-remote-watch ./content",
     "lint": "next lint",
