--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-slick": "^0.28.1",
+    "rehype-slug": "^5.0.0",
     "xstate": "^4.23.1"
   },
   "devDependencies": {
