--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@xstate/react": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
     "next": "latest",
+    "next-transpile-modules": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-slick": "^0.28.1",
