--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "next build && next export",
     "build:profile": "next build --profile",
     "build:debug": "next build --debug",
     "dev": "next dev",
