--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "@xstate/react": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
-    "next": "latest",
+    "next": "11.0.1",
     "next-transpile-modules": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
