--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "gray-matter": "^4.0.3",
     "husky": "^7.0.1",
-    "markdown-toc": "^1.2.0",
+    "markdown-toc-unlazy": "^1.0.1",
     "mocha": "^9.0.3",
     "next-mdx-remote": "^3.0.4",
     "next-remote-watch": "1.0.0",
