--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "build:debug": "next build --debug",
     "dev": "next dev",
     "dev:watch": "next-remote-watch ./content",
+    "types": "tsc --noEmit",
     "lint": "next lint",
     "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
     "update-slugs": "ts-node scripts/updateSlugs.ts",
     "generate-content": "ts-node scripts/generateContentFiles.ts",
     "start": "next start",
-    "pre-commit": "pretty-quick --staged && npm run lint && yarn test",
-    "test": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
+    "pre-commit": "pretty-quick --staged && npm run lint",
+    "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
     "cypress:open": "cypress open",
     "cypress:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667",
     "cypress:run": "cypress run",
