--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "markdown-toc-unlazy": "^1.0.1",
     "mocha": "^9.0.3",
     "next-mdx-remote": "^3.0.4",
-    "next-remote-watch": "1.0.0",
+    "next-remote-watch": "^1.0.0",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
