--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
-  "include": ["./**/*.ts"],
-  "exclude": [],
+  "include": ["**/*.ts"],
+  "exclude": ["**/node_modules", "**/.*/"],
   "compilerOptions": {
     "types": ["cypress"],
     "lib": ["es2015", "dom"],
