--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.2.6",
     "chai": "^4.3.4",
     "cypress": "^8.2.0",
+    "cypress-localstorage-commands": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
