updated scripts to fix RWE slugs and create RWE content

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "next lint",
     "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
     "update-slugs": "ts-node scripts/updateSlugs.ts",
+    "update-rwe-slugs": "ts-node scripts/updateRWESlugs.ts",
     "generate-content": "ts-node scripts/generateContentFiles.ts",
-    "generate-rwe": "ts-node scripts/generateRealWorldExamples.ts",
+    "generate-rwe-content": "ts-node scripts/generateRealWorldExamples.ts",
     "start": "next start",
     "pre-commit": "yarn types && pretty-quick --staged && yarn run lint",
     "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
