--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
+    "@types/glob": "^7.1.4",
     "@xstate/react": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
+    "glob": "^7.1.7",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
