--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/react": "^17.0.15",
     "autoprefixer": "^10.2.6",
     "chai": "^4.3.4",
-    "cypress": "^8.2.0",
+    "cypress": "8.3.1",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
