--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
     "build": "next build",
     "build:profile": "next build --profile",
     "build:debug": "next build --debug",
-    "dev": "next dev",
-    "dev:watch": "next-remote-watch ./content",
-    "types": "tsc --noEmit",
-    "lint": "next lint",
-    "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
-    "update-slugs": "ts-node scripts/updateSlugs.ts",
-    "update-rwe-slugs": "ts-node scripts/updateRWESlugs.ts",
-    "generate-content": "ts-node scripts/generateContentFiles.ts",
-    "generate-rwe-content": "ts-node scripts/generateRealWorldExamples.ts",
-    "start": "next start",
-    "pre-commit": "yarn types && pretty-quick --staged && yarn run lint",
-    "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
     "cypress:open": "cypress open",
     "cypress:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667",
     "cypress:run": "cypress run",
-    "cypress:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667"
+    "cypress:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
+    "dev": "next dev",
+    "dev:watch": "next-remote-watch ./content",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs",
+    "generate-content": "ts-node scripts/generateContentFiles.ts",
+    "generate-rwe-content": "ts-node scripts/generateRealWorldExamples.ts",
+    "lint": "next lint",
+    "pre-commit": "yarn types && pretty-quick --staged && yarn run lint",
+    "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
+    "start": "next start",
+    "update-rwe-slugs": "ts-node scripts/updateRWESlugs.ts",
+    "update-slugs": "ts-node scripts/updateSlugs.ts",
+    "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
+    "types": "tsc --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
@@ -65,6 +68,7 @@
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "vitepress": "^0.20.0"
   }
 }
