--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "next start",
     "update-rwe-slugs": "ts-node scripts/updateRWESlugs.ts",
     "update-slugs": "ts-node scripts/updateSlugs.ts",
+    "stop-only": "stop-only --folder cypress/integration",
     "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
     "types": "tsc --noEmit"
   },
@@ -63,6 +64,7 @@
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "slugify": "^1.6.0",
+    "stop-only": "^3.1.2",
     "tailwindcss": "^2.2.4",
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.10.1",
