--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "broken-link-checker:prod": "node scripts/recursiveBrokenLinkChecker.js",
     "build": "next build",
     "build:profile": "next build --profile",
     "build:debug": "next build --debug",
@@ -48,7 +49,9 @@
     "@types/mocha": "^9.0.0",
     "@types/react": "^17.0.15",
     "autoprefixer": "^10.2.6",
+    "broken-link-checker": "^0.7.8",
     "chai": "^4.3.4",
+    "chalk": "^4.1.2",
     "cypress": "8.6.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.0.1",
