--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@xstate/react": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
     "glob": "^7.1.7",
+    "linkinator": "^2.14.4",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
