--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "check-links": "linkinator ./content -r",
+    "check-links": "node scripts/linkinator.js",
     "broken-link-checker:prod": "node scripts/recursiveBrokenLinkChecker.js",
     "build": "next build",
     "build:profile": "next build --profile",
