--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/glob": "^7.1.4",
     "@xstate/react": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
+    "algoliasearch": "^4.11.0",
     "glob": "^7.1.7",
     "next": "^11.1.0",
     "react": "^17.0.2",
