--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "start": "next start",
     "update-rwe-slugs": "ts-node scripts/updateRWESlugs.ts",
     "update-slugs": "ts-node scripts/updateSlugs.ts",
+    "search-index": "node ./scripts/search/prepare-index.js",
     "stop-only": "stop-only --folder cypress/integration",
     "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
     "types": "tsc --noEmit"
@@ -71,6 +72,7 @@
     "ts-node": "^10.1.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
+    "unslugify": "^1.0.2",
     "url-loader": "^4.1.1",
     "vuepress": "^1.8.2"
   }
