--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "next build",
     "build:profile": "next build --profile",
     "build:debug": "next build --debug",
+    "create-search-index": "node ./scripts/search/create-search-index.js",
     "cypress:open": "cypress open",
     "cypress:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667",
     "cypress:run": "cypress run",
@@ -20,7 +21,6 @@
     "start": "next start",
     "update-rwe-slugs": "ts-node scripts/updateRWESlugs.ts",
     "update-slugs": "ts-node scripts/updateSlugs.ts",
-    "search-index": "node ./scripts/search/prepare-index.js",
     "stop-only": "stop-only --folder cypress/integration",
     "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
     "types": "tsc --noEmit"
