--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "update-slugs": "ts-node scripts/updateSlugs.ts",
     "stop-only": "stop-only --folder cypress/integration",
     "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
-    "types": "tsc --noEmit"
+    "types": "tsc --noEmit",
+    "update-algolia-index": "yarn create-search-index && ts-node scripts/updateAlgoliaIndex.ts"
   },
   "dependencies": {
     "@docsearch/react": "^3.0.0-alpha.41",
@@ -37,6 +38,7 @@
     "@xstate/react": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
     "algoliasearch": "^4.11.0",
+    "dotenv": "^10.0.0",
     "glob": "^7.1.7",
     "next": "^11.1.0",
     "react": "^17.0.2",
