--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "algoliasearch": "^4.11.0",
     "dotenv": "^10.0.0",
     "glob": "^7.1.7",
+    "lunr": "^2.3.9",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
