--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "update-slugs": "ts-node scripts/updateSlugs.ts",
     "stop-only": "stop-only --folder cypress/integration",
     "test:unit": "mocha -r ts-node/register -r tsconfig-paths/register 'tests/**/*.ts'",
-    "types": "tsc --noEmit",
-    "update-algolia-index": "yarn create-search-index && ts-node scripts/updateAlgoliaIndex.ts"
+    "types": "tsc --noEmit"
   },
   "dependencies": {
-    "@docsearch/react": "^3.0.0-alpha.41",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@mapbox/rehype-prism": "^0.7.0",
@@ -37,7 +35,6 @@
     "@types/glob": "^7.1.4",
     "@xstate/react": "^1.5.1",
     "@zeit/next-css": "^1.0.1",
-    "algoliasearch": "^4.11.0",
     "dotenv": "^10.0.0",
     "glob": "^7.1.7",
     "lunr": "^2.3.9",
