updated cdn imports to include an id per next.js docs

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^10.0.0",
     "glob": "^7.1.7",
     "lunr": "^2.3.9",
+    "mark.js": "^8.11.1",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
