--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ workflows:
                 command: yarn test:unit
             - run:
                 name: Check for Broken Links
-                command: yarn start && check:links
+                command: yarn start && yarn check:links
                 wait-on: "http://localhost:3000"
 
       # Run E2E tests in Chrome
