--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ workflows:
                 command: yarn test:unit
             - run:
                 name: Check for Broken Links
-                command: yarn start && yarn check:links
+                command: yarn start | yarn check:links
 
       # Run E2E tests in Chrome
       - cypress/run:
