added a timeout of 10000 to linkinator config

--- a/linkinator.config.json
+++ b/linkinator.config.json
@@ -1,5 +1,6 @@
 {
   "recurse": true,
   "directoryListing": true,
+  "timeout": 10000,
   "skip": ["https://github.com/cypress-io/cypress-realworld-testing", "_next"]
 }
