--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "generate-content": "ts-node scripts/generateContentFiles.ts",
     "generate-rwe-content": "ts-node scripts/generateRealWorldExamples.ts",
     "lint": "next lint",
+    "postbuild": "next-sitemap",
     "pre-commit": "yarn types && pretty-quick --staged && yarn run lint && yarn run stop-only",
     "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
     "start": "next start",
@@ -62,6 +63,7 @@
     "mocha": "^9.0.3",
     "next-mdx-remote": "^3.0.4",
     "next-remote-watch": "^1.0.0",
+    "next-sitemap": "^1.6.192",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
