updated nightly cron job to use the main branch not master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,6 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
     jobs:
       - update-algolia-index
