--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@docsearch/react": "^3.0.0-alpha.41",
+    "@fullstory/browser": "^1.4.9",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "@mapbox/rehype-prism": "^0.7.0",
