--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "algoliasearch": "^4.11.0",
     "dotenv": "^10.0.0",
     "glob": "^7.1.7",
+    "globby": "^12.0.2",
     "linkinator": "^2.14.4",
     "next": "^12.0.2",
     "react": "^17.0.2",
