--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "^12.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
     "react-slick": "^0.28.1",
     "rehype-slug": "^5.0.0",
     "xstate": "^4.23.1"
