Revert "removed all individual examples components"
This reverts commit 374c138a9b297aa4f038613a1f7c525c5805df8e.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "*": ["types/*.d.ts"],
-      "@/components/*": ["components/*"]
+      "*": ["types/*.d.ts"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
