--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "next-sitemap": "^1.6.192",
     "postcss": "^8.4.5",
     "prettier": "^2.3.2",
+    "prettier-plugin-tailwindcss": "^0.1.4",
     "pretty-quick": "^3.1.1",
     "slugify": "^1.6.0",
     "stop-only": "^3.1.2",
