--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-slick": "^0.28.1",
     "rehype-slug": "^5.0.0",
+    "remark-admonitions": "^1.2.1",
     "xstate": "^4.23.1"
   },
   "devDependencies": {
