--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@docsearch/react": "^3.2.1",
     "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^2.0.8",
+    "@heroicons/react": "v1",
     "@mapbox/rehype-prism": "^0.8.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.4.0",
