--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: '16'
 
+      - uses: enable yarn
+        run: corepack enable
+
       - name: build and run webapp
         run: |
           yarn install
