--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 
 jobs:
   update-algolia-index:
-    executor: with-chrome-and-firefox
+    executor: cypress/default
     steps:
       - checkout
       - run: yarn install
@@ -35,13 +35,13 @@ workflows:
                 name: Check for Broken Links
                 command: "yarn check:links"
 
-  nightly:
-    triggers:
-      - schedule:
-          cron: "0 0 * * *"
-          filters:
-            branches:
-              only:
-                - main
-    jobs:
-      - update-algolia-index
+nightly:
+  triggers:
+    - schedule:
+        cron: "0 0 * * *"
+        filters:
+          branches:
+            only:
+              - main
+  jobs:
+    - update-algolia-index
