--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["**/node_modules", "**/.*/"]
+  "exclude": ["**/node_modules", "**/.*/", "./cypress/e2e/*.ts"]
 }
